--- a/app/src/main/res/layout/fragment_ouput.xml
+++ b/app/src/main/res/layout/fragment_ouput.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ouputFragment">
 
     <TextView
+        android:id="@+id/aTextView"
+        android:textSize="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="A = " />
+
+    <TextView
+        android:id="@+id/bTextView"
+        android:textSize="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="B = " />
+
+    <TextView
+        android:id="@+id/opTextView"
+        android:textSize="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Operation = None " />
+
+    <TextView
         android:id="@+id/ansTextView"
         android:textSize="25dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Click on buton to do calculation" />
+        android:layout_height="wrap_content"
+        android:text="Click on button to do calculation" />
 
-</FrameLayout>
+</LinearLayout>
