--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -9,136 +9,205 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/clear_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
+                android:text="Clear All" />
+
+            <Button
+                android:id="@+id/clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
+                android:text="Clear" />
+
+            <Button
+                android:id="@+id/ans"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
+                android:text="Answer" />
+
+            <Button
+                android:id="@+id/pow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
+                android:text="^" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/one"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="1" />
 
             <Button
                 android:id="@+id/two"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="2" />
 
             <Button
                 android:id="@+id/three"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="3" />
 
             <Button
                 android:id="@+id/add"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="+" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp">
+
             <Button
                 android:id="@+id/four"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="4" />
 
             <Button
                 android:id="@+id/five"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="5" />
 
             <Button
                 android:id="@+id/six"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="6" />
 
             <Button
                 android:id="@+id/sub"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="-" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/seven"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="7" />
 
             <Button
                 android:id="@+id/eight"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="8" />
 
             <Button
                 android:id="@+id/nine"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="9" />
 
             <Button
                 android:id="@+id/mul"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="*" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="10dp">
+
             <Button
                 android:id="@+id/decimal"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="." />
 
             <Button
                 android:id="@+id/zero"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="0" />
 
             <Button
-                android:id="@+id/ans"
-                android:onClick="calc_clicked"
+                android:id="@+id/sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Answer" />
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
+                android:text="+/-" />
 
             <Button
                 android:id="@+id/div"
-                android:onClick="calc_clicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:onClick="calc_clicked"
                 android:text="/" />
         </TableRow>
+
     </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
