--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -180,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:onClick="calc_clicked"
-                android:text="." />
+                android:text="Divide by 10" />
 
             <Button
                 android:id="@+id/zero"
